tree-optimization/99121 - avoid ICEing for non-constant sizes

The following is a simple fix to avoid ICEing on non-constant
sizes of ARRAY_REFs instead of backporting too intrusive changes
done on trunk.

2022-04-07  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/99121
	* gimple-array-bounds.cc (array_bounds_checker::check_mem_ref):
	Bail out for non-constant type size.